# lenovo-yoga-fan-control

./: .gitignore  CMakeLists.txt  README.md  install_manifest.txt  main.cpp  yoga_fan  yoga_fan.service  yoga_fan.sh  yoga_fan_daemon
